Mejora navegación y añadir logout.jsp. He añadido en las páginas: login.jsp, pageA.htlml y pageU.html enlaces para volver a index.jsp He añadido página jsp para realzar logout.

--- a/web/secureAdmin/pageA.html
+++ b/web/secureAdmin/pageA.html
@@ -1,9 +1,11 @@
 <html>
-   <head>
-      <title>Admin secure area</title>
-   </head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Admin secure area</title>
+    </head>
    <body>
       <h1>Admin secure area</h1>
-      <p>Volver <a href="../index.jsp" >aquí!</a></p>      
+      <p>Volver <a href="../index.jsp" >¡aquí!</a></p>  
+      <p>Logout <a href="../logout.jsp" >aqui!</a></p>
    </body>
 </html>
