--- a/web/secureUser/pageU.html
+++ b/web/secureUser/pageU.html
@@ -1,9 +1,11 @@
 <html>
    <head>
       <title>User secure area</title>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    </head>
    <body>
       <h1>User Secure Area</h1>
       <p>Volver <a href="../index.jsp" >aqui!</a></p>
+      <p>Logout <a href="../logout.jsp" >aqui!</a></p>
    </body>
 </html>
